refactor: Code modularization and project structure improvement / 코드 모듈화 및 프로젝트 구조 개선
- Separated modules by functionality in src/ folder
- Organized folder structure (docs, config, assets, bin, tools)
- Removed duplicate files and fixed FFmpeg path issues
- Simplified gui_app.py to 24 lines
- src/ 폴더에 기능별 모듈 분리
- 폴더 구조 정리 (docs, config, assets, bin, tools)
- 중복 파일 제거 및 FFmpeg 경로 문제 해결
- gui_app.py 24줄로 간소화

--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -2,10 +2,10 @@
 maxUploadSize = 2048
 
 [theme]
-primaryColor = "#FF00FF"
-backgroundColor = "#000000"
-secondaryBackgroundColor = "#1A1A1A"
-textColor = "#00FF00"
+primaryColor = "#00D4FF"
+backgroundColor = "#0E1117"
+secondaryBackgroundColor = "#1E1E1E"
+textColor = "#FFFFFF"
 
 [browser]
 gatherUsageStats = false
