--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -2,10 +2,10 @@
 maxUploadSize = 2048
 
 [theme]
-primaryColor = "#00D4FF"
-backgroundColor = "#0E1117"
-secondaryBackgroundColor = "#1E1E1E"
-textColor = "#FFFFFF"
+primaryColor = "#4ECDC4"
+backgroundColor = "#1A1A2E"
+secondaryBackgroundColor = "#16213E"
+textColor = "#E0E0E0"
 
 [browser]
 gatherUsageStats = false
