--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -2,10 +2,10 @@
 maxUploadSize = 2048
 
 [theme]
-primaryColor = "#4ECDC4"
-backgroundColor = "#1A1A2E"
-secondaryBackgroundColor = "#16213E"
-textColor = "#E0E0E0"
+primaryColor = "#FF6B6B"
+backgroundColor = "#FFFFFF"
+secondaryBackgroundColor = "#F0F2F6"
+textColor = "#262730"
 
 [browser]
 gatherUsageStats = false
