--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 streamlit>=1.28.0
 openai-whisper>=20231117
-torch==2.0.1
-torchaudio==2.0.2
+torch>=2.5.0
+torchaudio>=2.5.0
 numpy<2.0.0
 scipy>=1.10.0
 soundfile>=0.12.1
